@@ -23,6 +23,7 @@ Verilator 5.007 devel
 * Support static function variables (#3830). [Ryszard Rozak, Antmicro Ltd]
 * Fix real parameters of infinity and NaN.
 * Fix pattern assignment to unpacked structs (#3510). [Mostafa Garnal]
+* Fix single-element replication to dynarray/unpacked/queue (#3548). [Gustav Svensk]
 
 
 Verilator 5.006 2023-01-22
